@@ -1,3 +1,8 @@
+2004-06-20  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* src/gcompris/gcompris-edit.c: (main): fixed (gcompris_edit was not working anymore for a while)
+	* src/gcompris/interface.c: (create_gcompris_edit): fixed the path to the desktop icon
+
 
 	RELEASED 6.1
 
